--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "nome-sua-api",
   "version": "1.0.0",
-  "description": "descrição sua API",
+  "description": "API criada por Eduardo Portugal Souza Rocha",
   "main": "server.js",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "Eduardo Portugal Souza Rocha",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
